--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <title>My Notes</title>
 </head>
 <body>
-    <h1>Welcome</h1>
+    <div id="header">
+        <div><h1 id="name">My Notes</h1></div>
+        <div><button id="install-button">Install</button></div>
+    </div>
+
+    <div id="notes"></div>
 
     <script src="/scripts/app.js"></script>
     <script src="/scripts/install.js"></script>
